--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -31,5 +31,5 @@ jobs:
             # path to JSON payload to send to Slack if webhook route. If not supplied, json from GitHub event will be sent instead. If payload is provided, it will take preference over this field
             # payload-file-path: # optional
         env:
-          SLACK_WEBHOOK_URL : "https://hooks.slack.com/workflows/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"
+          SLACK_WEBHOOK_URL : ${{ secrets.SLACK_URL }}
         
