--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -17,10 +17,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-
-      - name: send slack message
-        uses: slackapi/slack-github-action@v1.19.0
-        with:
+       - name: test user name
+         if: github.actor == 'chief-tim'
+         run: echo "DEFAULT_TARGET=<${{ secrets.CHIEF_TIM }}>" >> $GITHUB_ENV
+       - name: send slack message
+         uses: slackapi/slack-github-action@v1.19.0
+         with:
             # Slack channel ID where message will be posted. Needed if using bot token
             # channel-id: C03NNTK1U69
             # Message to post into Slack. Needed if using bot token
@@ -30,7 +32,7 @@ jobs:
               {"channel": "#test-github-action", "username": "webhookbot", "text": "This is posted to #test-github-action and comes from a bot named webhookbot. ${{ env.DEFAULT_TARGET}}", "icon_emoji": ":ghost:"}
             # path to JSON payload to send to Slack if webhook route. If not supplied, json from GitHub event will be sent instead. If payload is provided, it will take preference over this field
             # payload-file-path: # optional
-        env:
+         env:
           SLACK_WEBHOOK_URL : ${{ secrets.SLACK_SERVICE_URL }}
           DEFAULT_TARGET : "@here"
         
