--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -19,7 +19,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
        - name: test user name
          if: github.actor == 'chief-tim'
-         run: echo "DEFAULT_TARGET=<${{ secrets.CHIEF_TIM }}>" >> $GITHUB_ENV
+         run: echo "DEFAULT_TARGET=<${{ secrets.SLACK_SERVICE_URL  }}>" >> $GITHUB_ENV
        - name: send slack message
          uses: slackapi/slack-github-action@v1.19.0
          with:
