--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -17,11 +17,11 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access 
-       - name: check env
-         run: echo "${{env.DEFAULT_TARGET}}"
+       - name: echo target
+         run:  echo "USERNAME=${{secrets[github.actor]}}" >> $GITHUB_ENV
        - name: test user name
-         if: github.actor == 'chief-tim'
-         run: echo "DEFAULT_TARGET=<${{ secrets.CHIEF_TIM  }}>" >> $GITHUB_ENV
+         if: ${{env.USERNAME}} != NULL 
+         run: echo "DEFAULT_TARGET=<${{ env.USERNAME  }}>" >> $GITHUB_ENV
        - name: check env
          run: echo "${{env.DEFAULT_TARGET}}"
        - name: send slack message
