--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -18,10 +18,12 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access 
        - name: echo target
-         run:  echo "USERNAME=${{secrets[github.actor]}}" >> $GITHUB_ENV
+         run:  echo "USERNAME=${{secrets[github.actor]}}" >> $GITHUB_ENV | tr 'a-z' 'A-Z'
        - name: test user name
-         if: ${{env.USERNAME}} != ''
-         run: echo "DEFAULT_TARGET=<${{ env.USERNAME  }}>" >> $GITHUB_ENV
+         run: |
+           if [ "$USERNAME" == "" ]; then
+            echo "DEFAULT_TARGET=<${{ env.USERNAME  }}>" >> $GITHUB_ENV
+           fi
        - name: check env
          run: echo "${{env.DEFAULT_TARGET}}"
        - name: send slack message
