--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -20,7 +20,7 @@ jobs:
        - name: echo target
          run: |
            echo "NAME=${{github.actor}}" >> $GITHUB_ENV | tr 'a-z' 'A-Z'
-           echo " USERNAME=${{secrets[$NAME]}} >> $GITHUB_ENV
+           echo " USERNAME=${{secrets[env.NAME]}} >> $GITHUB_ENV
        - name: test user name
          run: |
            if [ "$USERNAME" == "" ]; then
