--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -20,18 +20,12 @@ jobs:
        - name: get user name
          run:  echo "::set-output name=NAME::$( echo ${{github.actor}} | tr 'a-z' 'A-Z' | tr '-' '_')"
          id: get-user-name
-       - name: check output
-         run: echo "${{steps.get-user-name.outputs.NAME}}"
-       - name: get slack name
-         run:  echo "USERNAME=${{secrets[env.github-name]}}" >> $GITHUB_ENV 
-         env:
-          github-name: ${{ steps.get-user-name.outputs.NAME }}
-       - name: check username
-         run: echo "${{env.USERNAME}}"
+#        - name: check output
+#          run: echo "${{steps.get-user-name.outputs.NAME}}"
        - name: test user name
          run: |
-           if [ "$USERNAME" == "" ]; then
-            echo "DEFAULT_TARGET=<${{ env.USERNAME  }}>" >> $GITHUB_ENV
+           if [ "${{secrets[steps.get-user-name.outputs.NAME]}}" != "" ]; then
+            echo "DEFAULT_TARGET=<${{secrets[steps.get-user-name.outputs.NAME]}}>" >> $GITHUB_ENV
            fi
        - name: check env
          run: echo "${{env.DEFAULT_TARGET}}"
