--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Pull Request
+name: Pull Request 2
 
 # Controls when the workflow will run
 on:
